Remove next-auth

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 	},
 	"dependencies": {
 		"formik": "^2.4.6",
+		"iron-session": "^8.0.2",
 		"next": "14.0.4",
-		"next-auth": "^4.24.7",
 		"react": "^18",
 		"react-dom": "^18",
 		"yup": "^1.4.0",
